--- a/client/templates/teams.html
+++ b/client/templates/teams.html
@@ -11,8 +11,8 @@
     </div>
   </div>
   <div class="medium-7 grid-block vertical">
-    <div class="grid-block">
-      <h1>Performance Data</h1>
+    <div class="grid-block" ng-controller="highchartsCtrl">
+      <highchart id="chart1" config="chartConfig" class="span10"></highchart>
     </div>
     <div class="grid-block">
       <h1>Make Trade/Accept</h1>
