--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -26,8 +26,9 @@
     <div class="grid-block" ng-controller="highchartsCtrl">
       <highchart id="chart1" config="chartConfig" class="span10"></highchart>
     </div>
-    <div class="grid-block">
+    <div class="grid-block" ng-controller="tradeCtrl">
       <h1>Make Trade/Accept</h1>
+      <button ng-click="makeTrade()">Make Trade</button>
     </div>
   </div>
 </div>
