--- a/client/templates/teams.html
+++ b/client/templates/teams.html
@@ -12,25 +12,25 @@
   </div>
   <div class="medium-7 grid-block vertical">
     <div class="grid-block" ng-controller="highchartsCtrl">
-      <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+      <highchart id="chart" config="chartConfig" style="width: 100%;"></highchart>
     </div>
     <div class="grid-block medium-12">
       <h1>Trading Panel</h1>
     </div>
-    <div class="grid-block">
+    <div class="grid-block" ng-controller="tradeCtrl">
       <div class="grid-content">
         <a class="button" ng-click="seeTrades()">See Trades</a>
 
         <div class="grid-block">
           <div class="small-12 medium-6 grid-content">
-            <label>Select Team</label>
-            <select ng-model="buyingTeam" ng-options="competitor.name for (id,competitor) in competitors">
+            <label>Send offer to</label>
+            <select ng-model="receivingTeam" ng-options="competitor.name for (id,competitor) in competitors">
               <option value="" disabled="disabled" ng-selected="true">Choose a Team</option>
             </select>
           </div>
           <div class="small-12 medium-6 grid-content">
             <label>Select Service</label>
-            <select ng-model="serviceToSell" ng-options="service for (id, service) in servicesOffered">
+            <select ng-model="serviceOffered" ng-options="service for (id, service) in servicesOffered">
               <option value="" disabled="disabled" ng-selected="true">Choose a Service</option>
             </select>
           </div>
@@ -38,24 +38,24 @@
             <label>
               Negotiated Selling Price
             <span class="inline-label">
-              <input type="search" placeholder="Enter Price">
-              <a href="#" ng-click="testClick()" class="button">Send Offer</a>
+              <input type="search" placeholder="Enter Price" ng-model="priceOffered">
+              <a href="#" ng-click="makeTrade(priceOffered,receivingTeam,serviceOffered)" class="button">Send Offer</a>
             </span>
             </label>
           </div>
         </div>
       </div>
-      <div class="grid-block">
+      <div class="grid-block medium-6">
         <div class="grid-block" style="max-height: 500px">
           <section class="block-list">
             <header>Offered Trades</header>
             <ul>
-              <li ng-repeat="object in trades.pending">
+              <li ng-repeat="(key, object) in trades.pending">
                 <a href="#">
-                  {{object.companyProviding}} wants to sell you {{object.service}} services, for a price of
-                  {{object.priceSoldFor}}
-                  <a class="success button" href="#">Accept</a>
-                  <a class="alert button" href="#">Decline</a>
+                  {{key}} test {{object.companyProvidingName}} wants to sell you {{object.service}} services, for a price of
+                  ${{object.priceSoldFor}}
+                  <a class="success button" href="#" ng-click="acceptTrade(key)">Accept</a>
+                  <a class="alert button" href="#" ng-click="declineTrade(key)">Decline</a>
                 </a>
               </li>
             </ul>
