First mvp, need to safe-proof the trading for teams with checks and change some of the database news info

--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -9,7 +9,7 @@
         <ul>
           <li ng-repeat="object in adminNewsFeed">
             <a>
-              {{object.news}} status:{{object.sentToTeams}}
+              News for Quarter: {{object.quarter}}
             </a>
 
             <div class="small switch">
