--- a/client/templates/teams.html
+++ b/client/templates/teams.html
@@ -1,11 +1,14 @@
 <div class="grid-block">
   <div class="medium-5 grid-block">
     <div class="grid-content">
-      <h1>News Feed</h1>
+      <h1>Quarterly News Feed</h1>
       <section class="block-list">
         <header>Events</header>
         <ul>
-          <li ng-repeat="object in newsfeed"><a href="#">{{object.news}}</a></li>
+          <li ng-repeat="object in newsfeed"><a href="#">
+            <h4>Quarter {{object.quarter}}</h4>
+            <div ng-repeat="data in object.news | filter: teamInfo.industry">{{data.update}}</div>
+          </a></li>
         </ul>
       </section>
     </div>
@@ -39,7 +42,7 @@
               Negotiated Selling Price
             <span class="inline-label">
               <input type="search" placeholder="Enter Price" ng-model="priceOffered">
-              <a href="#" ng-click="makeTrade(priceOffered,receivingTeam,serviceOffered)" class="button">Send Offer</a>
+              <a href="#" ng-click="makeTrade(priceOffered,receivingTeam,serviceOffered)" class="button">Send Offer<i class="fa fa-paper-plane"></i></a>
             </span>
             </label>
           </div>
@@ -52,10 +55,10 @@
             <ul>
               <li ng-repeat="(key, object) in trades.pending">
                 <a href="#">
-                  {{key}} test {{object.companyProvidingName}} wants to sell you {{object.service}} services, for a price of
-                  ${{object.priceSoldFor}}
-                  <a class="success button" href="#" ng-click="acceptTrade(key)">Accept</a>
-                  <a class="alert button" href="#" ng-click="declineTrade(key)">Decline</a>
+                  <strong>{{object.companyProvidingName}}</strong> wants to sell you <strong>{{object.service}}</strong> services, for a price of
+                  <strong>${{object.priceSoldFor}}</strong>. Please accept or decline this offer using the buttons below.
+                  <a class="success button" href="#" ng-click="acceptTrade(key)">Accept <i class="fa fa-check-circle"></i></a>
+                  <a class="alert button" href="#" ng-click="declineTrade(key)">Decline <i class="fa fa-ban"></i></a>
                 </a>
               </li>
             </ul>
