--- a/client/templates/teams.html
+++ b/client/templates/teams.html
@@ -1,6 +1,6 @@
 <zf-notification-set id="main-notifications" position="top-right"></zf-notification-set>
 
-<div class="grid-block">
+<!--<div class="grid-block">-->
   <div class="medium-5 grid-block">
     <div class="grid-content">
       <h1>Quarterly News Feed</h1>
@@ -8,16 +8,19 @@
         <header>Events</header>
         <ul>
           <li ng-repeat="object in newsfeed"><a href="#">
-            <h4>Quarter {{object.quarter}}</h4>
+            <h4><strong>Quarter {{object.quarter}}</strong></h4>
+            <h6><strong>Management Report</strong></h6>
             <div ng-repeat="data in object.news | filter: teamInfo.industry">{{data.update}}</div>
+            <h6><strong>Global Economic Report</strong></h6>
+            <div>{{object.global}}</div>
           </a></li>
         </ul>
       </section>
     </div>
   </div>
   <div class="medium-7 grid-block vertical">
-    <div class="grid-block" ng-controller="highchartsCtrl">
-      <highchart id="chart" config="chartConfig" style="width: 100%;"></highchart>
+    <div class="grid-block" ng-controller="highchartsCtrl" style="height: 40vh; overflow-y: hidden">
+      <highchart id="chart" config="chartConfig" style="width: 100%; height: 50vh;"></highchart>
     </div>
     <div class="grid-block medium-12">
       <h1>Trading Panel</h1>
@@ -84,4 +87,4 @@
       </div>
     </div>
   </div>
-</div>
+<!--</div>-->
