--- a/client/templates/teams.html
+++ b/client/templates/teams.html
@@ -44,7 +44,7 @@
             <label>
               <header>Negotiated Selling Price</header>
             <span class="inline-label">
-              <input type="search" placeholder="Enter Price" ng-model="priceOffered">
+              <input type="number" placeholder="Enter Price" ng-model="priceOffered">
               <a href="#" ng-click="makeTrade(priceOffered,receivingTeam,serviceOffered)" class="button">Send Offer<i class="fa fa-paper-plane"></i></a>
             </span>
             </label>
