--- a/client/templates/admin.html
+++ b/client/templates/admin.html
@@ -1,9 +1,9 @@
 <div class="grid-block">
   <div class="medium-5 grid-block">
     <div class="grid-content">
-      <h1>News Feed</h1>
-      <button ng-click="addNewsItem()">Add News Item</button>
-      <button ng-click="removeNewsItem()">Remove News Item</button>
+      <h1>Admin News Panel</h1>
+      <!--<button ng-click="addNewsItem()">Add News Item</button>-->
+      <!--<button ng-click="removeNewsItem()">Remove News Item</button>-->
       <section class="block-list">
         <header>Events</header>
         <ul>
@@ -20,11 +20,22 @@
           </li>
         </ul>
       </section>
+      <h4>Trade Activity Per Firm</h4>
+      <section class="block-list">
+        <ul ng-repeat="team in teamsData | filter:'!administrator' ">
+          <header><h5>{{team.name}}, {{team.industry}}, {{team.country}}</h5></header>
+          <li ng-repeat="trade in team.trades.accepted">
+            <a>
+              <strong>Quarter {{trade.quarter}}:</strong> {{trade.companyProvidingName}} sold {{trade.service}} services for {{trade.priceSoldFor | currency}} to {{trade.companyReceivingName}}.
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
   </div>
   <div class="medium-7 grid-block vertical">
-    <div class="grid-block" ng-controller="highchartsCtrl">
-      <highchart id="chart1" config="chartConfig" class="span10"></highchart>
+    <div class="grid-block" ng-controller="adminCtrl" style="height: 40vh; overflow-y: hidden">
+      <highchart id="chart" config="chartConfig" style="width: 100%; height: 50vh;"></highchart>
     </div>
     <div class="grid-block" ng-controller="tradeCtrl">
       <h1>Make Trade/Accept</h1>
